# mswl-dt-2013

./: LICENSE  README.md
.metadata/.plugins/com.python.pydev.analysis/python_v1_3tswbhuj9gc4kibexhrzgzdx/: python.pydevsysteminfo
.metadata/.plugins/org.eclipse.core.resources/.projects/lesson2/: 1.tree
.metadata/.plugins/org.eclipse.core.resources/.root/: 2.tree
.metadata/.plugins/org.eclipse.core.resources/.root/.indexes/: properties.index
.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
.metadata/.plugins/org.eclipse.egit.ui/: dialog_settings.xml
.metadata/.plugins/org.eclipse.equinox.security.ui/: dialog_settings.xml
.metadata/.plugins/org.eclipse.jdt.ui/: dialog_settings.xml
.metadata/.plugins/org.eclipse.ui.workbench/: dialog_settings.xml  workingsets.xml
.metadata/.plugins/org.python.pydev/: dialog_settings.xml
.metadata/.plugins/org.python.pydev/v1_3tswbhuj9gc4kibexhrzgzdx/: modulesKeys  pythonpath
gtk-iviewer/: .anjuta_sym_db.db  Makefile.am  configure.ac  gtk-iviewer  gtk-iviewer.c
gtk-iviewer/.anjuta/session/: anjuta.session  dock-layout.xml
gtk-iviewer/src/: Makefile.am  gtk-iviewer  main.c
lesson1/: calc.py  leePasswd.py  user_dict.py
lesson2/read_passwd/: read_passwd.py
myspider/: README  myspider  myspider~  output.txt  setup.py  setup.py~
myspider/pymyspider/: __init__.py  __init__.py~
webcrawler/: AUTHORS  README  setup.py  webcrawler
webcrawler/pywebcrawler/: __init__.py
(+10 files in other folders)
